--- a/EasyCMS/Views/Shared/_Layout.cshtml
+++ b/EasyCMS/Views/Shared/_Layout.cshtml
@@ -16,13 +16,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("EasyCMS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
                     @{
                         if (Session.Count == 0)
                         {
@@ -33,7 +35,7 @@
                             <li>@Html.ActionLink((Session[0] as BasicModel.User).Account.ToString(), "Mine", "User")</li>
                             <li>@Html.ActionLink("Logout", "Logout", "Home")</li>
                         }
-}
+                    }
                 </ul>
             </div>
         </div>
